--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/colorPrimary"
     android:layout_height="match_parent"
-    tools:context=".StartActivity">
+    tools:context=".MainActivities.StartActivity">
 
     <TextView
         android:layout_width="wrap_content"
