--- a/app/src/main/res/layout/activity_login_mentee.xml
+++ b/app/src/main/res/layout/activity_login_mentee.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterMenteeActivity">
+    tools:context=".MainActivities.RegisterMenteeActivity">
 
 
     <android.support.v7.widget.Toolbar
