--- a/app/src/main/res/layout/activity_mentee_main.xml
+++ b/app/src/main/res/layout/activity_mentee_main.xml
@@ -21,5 +21,14 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/mentee_nav_header_main"
         app:menu="@menu/mentor_activity_main_drawer" />
+    <ProgressBar
 
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="330dp"
+        android:background="#9111"
+        android:paddingBottom="340dp"
+        android:layout_marginBottom="1dp"
+        android:visibility="gone"/>
 </android.support.v4.widget.DrawerLayout>
