--- a/app/src/main/res/menu/mentor_main.xml
+++ b/app/src/main/res/menu/mentor_main.xml
@@ -2,8 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/logout_btn"
-        android:orderInCategory="100"
+        android:id="@+id/logout"
         android:title="Log out"
         app:showAsAction="never" />
 </menu>
