--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#43C5B4</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#E96D98</color>
+    <color name="colorWhite">#F5F3F3</color>
 </resources>
