--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:gravity="center"
     android:orientation="vertical"
+    android:padding="20dp"
     android:background="@color/colorPrimary"
     android:layout_height="match_parent"
     tools:context=".MainActivities.StartActivity">
