--- a/app/src/main/res/layout/mentee_app_bar_main.xml
+++ b/app/src/main/res/layout/mentee_app_bar_main.xml
@@ -25,7 +25,7 @@
             android:background="@color/colorPrimary"
             app:tabSelectedTextColor="@color/colorAccent"
             app:tabIndicator="@color/colorAccent"
-            app:tabTextColor="@color/colorAccent">
+            app:tabTextColor="@color/colorWhite">
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
