--- a/app/src/main/res/layout/activity_question2_1.xml
+++ b/app/src/main/res/layout/activity_question2_1.xml
@@ -11,14 +11,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <TextView
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Counseling Online"
-        android:textSize="20dp"
-        android:textColor="@color/colorWhite"
-        android:textStyle="bold"/>
+        <TextView
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Counseling Online"
+            android:textSize="20dp"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold"/>
     </LinearLayout>
     <LinearLayout
         android:paddingTop="20dp"
@@ -46,7 +46,7 @@
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Have you ever been counseling?"/>
+            android:text="What is your feeling right now?"/>
 
         <Button
             android:layout_marginTop="20dp"
@@ -62,7 +62,7 @@
             android:layout_marginTop="10dp"
             android:id="@+id/ans2"
             android:textColor="@color/colorWhite"
-           android:background="@drawable/border"
+            android:background="@drawable/border"
             android:text="No"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
