--- a/app/src/main/res/layout/activity_question2.xml
+++ b/app/src/main/res/layout/activity_question2.xml
@@ -7,7 +7,7 @@
     android:padding="20dp"
     android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
-    tools:context=".MainActivities.Question1">
+    tools:context=".MainActivities.questions.Question1">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -55,12 +55,12 @@
             android:text="SINGLE"
             android:layout_width="match_parent"
             android:textStyle="bold"
-            android:id="@+id/ans1"
+            android:id="@+id/btn_ans1"
             android:layout_height="wrap_content" />
         <Button
             android:textStyle="bold"
             android:layout_marginTop="10dp"
-            android:id="@+id/ans2"
+            android:id="@+id/btn_ans2"
             android:textColor="@color/colorWhite"
             android:background="@drawable/border"
             android:text="Married"
