--- a/app/src/main/res/layout/activity_question2_1.xml
+++ b/app/src/main/res/layout/activity_question2_1.xml
@@ -7,7 +7,7 @@
     android:padding="20dp"
     android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
-    tools:context=".MainActivities.Question1">
+    tools:context=".MainActivities.questions.Question1">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -46,24 +46,32 @@
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="What is your feeling right now?"/>
-
+            android:text="What problem do you encounter that you want your counselor will tackle all about?"/>
         <Button
+            android:textStyle="bold"
             android:layout_marginTop="20dp"
+            android:id="@+id/btn_ans1"
             android:textColor="@color/colorWhite"
             android:background="@drawable/border"
-            android:text="Yes"
+            android:text="About Mental problems"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:layout_marginTop="10dp"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/border"
+            android:text="About your religion"
             android:layout_width="match_parent"
             android:textStyle="bold"
-            android:id="@+id/ans1"
+            android:id="@+id/btn_ans2"
             android:layout_height="wrap_content" />
         <Button
             android:textStyle="bold"
             android:layout_marginTop="10dp"
-            android:id="@+id/ans2"
+            android:id="@+id/btn_ans3"
             android:textColor="@color/colorWhite"
             android:background="@drawable/border"
-            android:text="No"
+            android:text="About your studies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
