--- a/app/src/main/res/layout/activity_question2_1_1.xml
+++ b/app/src/main/res/layout/activity_question2_1_1.xml
@@ -11,14 +11,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <TextView
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Counseling Online"
-        android:textSize="20dp"
-        android:textColor="@color/colorWhite"
-        android:textStyle="bold"/>
+        <TextView
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Counseling Online"
+            android:textSize="20dp"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold"/>
     </LinearLayout>
     <LinearLayout
         android:paddingTop="20dp"
@@ -46,13 +46,13 @@
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Have you ever been counseling?"/>
+            android:text="Are you depressed or feeling pressure?"/>
 
         <Button
             android:layout_marginTop="20dp"
             android:textColor="@color/colorWhite"
             android:background="@drawable/border"
-            android:text="Yes"
+            android:text="YEs"
             android:layout_width="match_parent"
             android:textStyle="bold"
             android:id="@+id/btn_ans1"
@@ -62,8 +62,8 @@
             android:layout_marginTop="10dp"
             android:id="@+id/btn_ans2"
             android:textColor="@color/colorWhite"
-           android:background="@drawable/border"
-            android:text="No"
+            android:background="@drawable/border"
+            android:text="Slightly Depressed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
