--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,7 +8,7 @@
     android:padding="20dp"
     android:background="@color/colorPrimary"
     android:layout_height="match_parent"
-    tools:context=".MainActivities.StartActivity">
+    tools:context=".MainActivities.activities.StartActivity">
 
     <TextView
         android:layout_width="wrap_content"
