--- a/app/src/main/res/layout/mentee_app_bar_main.xml
+++ b/app/src/main/res/layout/mentee_app_bar_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivities.MenteeMainActivity">
+    tools:context=".MainActivities.activities.MenteeMainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
