--- a/app/src/main/res/layout/activity_question2_1_1_1_1_1.xml
+++ b/app/src/main/res/layout/activity_question2_1_1_1_1_1.xml
@@ -44,17 +44,26 @@
         <TextView
             android:textSize="20dp"
             android:textStyle="bold"
+            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Counselors below can help you fix problems and motivate you to be more postive."/>
 
-      <android.support.v7.widget.RecyclerView
-          android:id="@+id/recycler_view"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-      </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
 
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/border_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
