--- a/app/src/main/res/layout/mentorlist500_1000_item.xml
+++ b/app/src/main/res/layout/mentorlist500_1000_item.xml
@@ -15,7 +15,7 @@
         android:text="fullname"
         android:id="@+id/fullname"
         android:layout_marginLeft="90dp"
-
+        android:textColor="#111"
         android:textStyle="bold"
         android:textSize="18sp"/>
     <TextView
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/expertise"
         android:text="ex"
+        android:textColor="#111"
         android:layout_marginLeft="90dp"
         android:layout_marginTop="20dp"
         android:textSize="16sp"/>
@@ -31,6 +32,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="90dp"
         android:text="rate"
+        android:id="@+id/rate"
+        android:textColor="#111"
         android:textSize="20dp"
         android:textStyle="bold"
         android:layout_marginTop="40dp"/>
