--- a/app/src/main/res/layout/fragment_mentor_list.xml
+++ b/app/src/main/res/layout/fragment_mentor_list.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivities.activities.MentorListFragment">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
