--- a/app/src/main/res/layout/mentorlist500_1000_item.xml
+++ b/app/src/main/res/layout/mentorlist500_1000_item.xml
@@ -9,32 +9,42 @@
         android:layout_height="80dp"
         android:id="@+id/profile_image"
         android:src="@mipmap/ic_launcher"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/profile_image">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="fullname"
         android:id="@+id/fullname"
-        android:layout_marginLeft="90dp"
-        android:textColor="#111"
-        android:textStyle="bold"
-        android:textSize="18sp"/>
+        android:maxLines="1"
+        android:textStyle="bold"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/expertise"
+        android:textStyle="bold"
         android:text="ex"
-        android:textColor="#111"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="20dp"
-        android:textSize="16sp"/>
+       />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
+        android:textStyle="bold"
         android:text="rate"
         android:id="@+id/rate"
-        android:textColor="#111"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_marginTop="40dp"/>
+        />
+    </LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:id="@+id/btn_add"
+        android:background="@color/colorPrimaryDark"
+        android:textColor="@color/colorWhite"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone"/>
 </RelativeLayout>
