--- a/app/src/main/res/menu/mentor_activity_main_drawer.xml
+++ b/app/src/main/res/menu/mentor_activity_main_drawer.xml
@@ -9,9 +9,9 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Find mentor" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/send_report"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Send Report" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
