--- a/app/src/main/res/layout/fragment_mentor_list.xml
+++ b/app/src/main/res/layout/fragment_mentor_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#63C5BC"
-    tools:context=".MainActivities.activities.MentorListFragment">
+    tools:context=".MainActivities.fragments.MentorListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_cont"
