--- a/app/src/main/res/layout/fragment_profile_fragments.xml
+++ b/app/src/main/res/layout/fragment_profile_fragments.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.ActionBarContainer xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/profile_fragment"
     android:padding="8dp"
 
     tools:context=".MainActivities.activities.ProfileFragments">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/profile_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -57,4 +57,4 @@
 
 
 
-</RelativeLayout>
+</android.support.v7.widget.ActionBarContainer>
