--- a/app/src/main/res/layout/activity_register_mentee.xml
+++ b/app/src/main/res/layout/activity_register_mentee.xml
@@ -12,22 +12,36 @@
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
     app:popupTheme="@style/AppTheme.PopupOverlay" />
-
+    <ScrollView
+        android:layout_below="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:gravity="center_horizontal"
-        android:padding="16dp"
+        android:padding="12dp"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:textSize="20sp"
             android:text="Create an Account" />
 
+
+        <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+                android:src="@drawable/photo"
+                android:id="@+id/profile_image"/>
+        <TextView
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Choose Photos"/>
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -73,5 +87,14 @@
             />
 
     </LinearLayout>
+    </ScrollView>
+    <ProgressBar
+        android:layout_marginTop="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:id="@+id/progressing"/>
+
+
 
 </RelativeLayout>
