--- a/app/src/main/res/layout/fragment_profile_fragments.xml
+++ b/app/src/main/res/layout/fragment_profile_fragments.xml
@@ -6,7 +6,7 @@
     android:id="@+id/profile_fragment"
     android:padding="8dp"
 
-    tools:context=".MainActivities.activities.ProfileFragments">
+    tools:context=".MainActivities.fragments.ProfileFragments">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
