--- a/app/src/main/res/layout/mentee_nav_header_main.xml
+++ b/app/src/main/res/layout/mentee_nav_header_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
@@ -12,13 +13,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+       android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:layout_width="match_parent"
@@ -32,5 +33,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
-
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:civ_border_width="10dp"
+        app:civ_border_color="#bfbfbf"
+        android:id="@+id/img_on"
+        android:visibility="gone"
+        android:layout_marginTop="-60dp"
+        android:layout_marginStart="50dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_marginLeft="20dp" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        app:civ_border_width="10dp"
+        app:civ_border_color="#05df29"
+        android:id="@+id/img_off"
+        android:visibility="gone"
+        android:layout_marginTop="-60dp"
+        android:layout_marginStart="50dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_marginLeft="20dp" />
 </LinearLayout>
