--- a/app/src/main/res/layout/activity_question2_1_1_1_1_1.xml
+++ b/app/src/main/res/layout/activity_question2_1_1_1_1_1.xml
@@ -3,20 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
     android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
     tools:context=".MainActivities.questions.Question1">
-
-    <TextView
+    <LinearLayout
+        android:padding="20dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:text="HOME"
         android:textStyle="bold"
         android:id="@+id/home"
-        android:textAlignment="textEnd"
+        android:layout_gravity="end"
+        android:src="@drawable/ic_home_black_24dp"
         android:textColor="@color/colorWhite"
-        android:textSize="20dp"/>
+        android:gravity="end" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -29,9 +32,10 @@
             android:textColor="@color/colorWhite"
             android:textSize="20dp"
             android:textStyle="bold" />
+
     </LinearLayout>
     <LinearLayout
-        android:paddingTop="20dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -46,10 +50,11 @@
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
-        android:padding="30dp"
-        android:layout_marginTop="50dp"
+        android:padding="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/border_layout"
         android:layout_width="match_parent"
+        android:layout_gravity="center"
         android:layout_height="wrap_content">
         <TextView
             android:textSize="20dp"
@@ -61,10 +66,18 @@
 
 
     </LinearLayout>
+    </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
+        android:padding="6dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <RelativeLayout
+        android:orientation="vertical"
         android:padding="10dp"
+
         android:layout_marginTop="20dp"
+
         android:background="@drawable/border_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -73,9 +86,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
+    </RelativeLayout>
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"/>
+    </LinearLayout>
 </LinearLayout>
