--- a/app/src/main/res/layout/activity_question2_2_2.xml
+++ b/app/src/main/res/layout/activity_question2_2_2.xml
@@ -7,7 +7,7 @@
     android:padding="20dp"
     android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
-    tools:context=".MainActivities.questions.Question1">
+    tools:context=".MainActivities.questions.Question2_2_2">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -60,7 +60,7 @@
         <Button
             android:textStyle="bold"
             android:layout_marginTop="10dp"
-            android:id="@+id/btn_ans2"
+            android:id="@+id/btn_answer2"
             android:textColor="@color/colorWhite"
             android:background="@drawable/border"
             android:text="Twice a week"
