--- a/app/src/main/res/layout/activity_question2_2_2_2.xml
+++ b/app/src/main/res/layout/activity_question2_2_2_2.xml
@@ -7,7 +7,7 @@
     android:padding="20dp"
     android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
-    tools:context=".MainActivities.questions.Question1">
+    tools:context=".MainActivities.questions.Question2_2_2_2">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -46,16 +46,16 @@
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Availability of counselor you want?"/>
+            android:text="Lastly, the rate of mentor you want? or payment?"/>
 
         <Button
             android:layout_marginTop="20dp"
             android:textColor="@color/colorWhite"
             android:background="@drawable/border"
-            android:text="Once 1 week"
+            android:text="500-1000/hour"
             android:layout_width="match_parent"
             android:textStyle="bold"
-            android:id="@+id/btn_ans1"
+            android:id="@+id/btn_answer1"
             android:layout_height="wrap_content" />
         <Button
             android:textStyle="bold"
@@ -63,7 +63,7 @@
             android:id="@+id/btn_ans2"
             android:textColor="@color/colorWhite"
             android:background="@drawable/border"
-            android:text="Twice a week"
+            android:text="1000-1500/hour"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
