--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -5,10 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.design.widget.AppBarLayout
-    android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:id="@+id/bar_layout"
-    android:layout_height="wrap_content"
-    android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -54,7 +54,7 @@
         </android.support.v7.widget.Toolbar>
 
 
-</android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_below="@+id/bar_layout"
@@ -64,14 +64,23 @@
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
+    <Button
+        android:id="@+id/schedule"
+        android:text="schedule"
+        android:textSize="10dp"
+        android:background="@drawable/border_schedule"
+        android:layout_alignParentBottom="true"
+        android:layout_width="75dp"
+        android:layout_height="wrap_content" />
     <RelativeLayout
         android:id="@+id/bottom"
+        android:layout_toRightOf="@+id/schedule"
         android:layout_width="match_parent"
-        android:padding="5dp"
+        android:padding="4dp"
         android:background="@color/colorWhite"
         android:layout_alignParentBottom="true"
-        
         android:layout_height="wrap_content">
+
         <EditText
             android:layout_toLeftOf="@+id/btn_send"
             android:hint="Type your message....."
