--- a/app/src/main/res/layout/activity_login_mentee.xml
+++ b/app/src/main/res/layout/activity_login_mentee.xml
@@ -7,19 +7,11 @@
     tools:context=".MainActivities.activities.RegisterMenteeActivity">
 
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimaryDark"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        android:layout_marginTop="100dp"
+
         android:gravity="center_horizontal"
         android:padding="16dp"
         android:orientation="vertical">
@@ -65,9 +57,7 @@
         android:id="@+id/progressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="330dp"
-        android:background="#9111"
-        android:paddingBottom="340dp"
-        android:layout_marginBottom="1dp"
-        android:visibility="gone"/>
+        android:layout_marginTop="100dp"
+        android:visibility="gone"
+        />
 </RelativeLayout>
