--- a/app/src/main/res/layout/fragment_profile_fragments.xml
+++ b/app/src/main/res/layout/fragment_profile_fragments.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.ActionBarContainer xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:id="@+id/profile_fragment"
-    android:padding="8dp"
+    android:padding="1dp"
     tools:context=".MainActivities.fragments.ProfileFragments">
 
     <android.support.v7.widget.CardView
@@ -12,48 +13,103 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:padding="8dp"
-            android:layout_height="wrap_content">
+            android:layout_height="250dp">
+            <ImageView
+                android:id="@+id/card_background"
+                android:background="#ececec"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:src="@mipmap/ic_launcher"/>
+
+            <ImageView
+                android:id="@+id/imageviews"
+                android:layout_width="match_parent"
+                android:layout_height="95dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="0dp"
+                android:background="@drawable/black_gradient"></ImageView>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="10dp"
+                android:id="@+id/profile_image"
+                android:src="@mipmap/ic_launcher"
+                android:layout_marginLeft="10dp" />
+            <Button
+                android:id="@+id/update_photo"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="150dp"
+                android:layout_marginEnd="10dp"
+                android:textColor="#111"
+                android:layout_marginBottom="32dp"
+                android:layout_toEndOf="@+id/profile_image"
+                android:layout_toRightOf="@+id/profile_image"
+                android:background="@drawable/btn_add_style"
+                android:text="Update Photo"
+                android:textSize="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="90dp" />
 
             <TextView
-                android:text="Profile"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/profile_image"
-                android:layout_marginTop="50dp"
-                android:src="@mipmap/ic_launcher"
-                android:layout_centerHorizontal="true"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="FULLNAME"
                 android:id="@+id/fullname"
-                android:layout_below="@+id/profile_image"
-                android:layout_marginTop="15dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
-                android:layout_centerHorizontal="true"
-                android:textSize="10dp"/>
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
-                android:layout_below="@+id/fullname"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginBottom="53dp"
+                android:layout_toEndOf="@+id/profile_image"
+                android:layout_toRightOf="@+id/profile_image"
+                android:text="Fullname"
+                android:textColor="#fff"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/email"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
-                android:layout_centerHorizontal="true"
-                android:textSize="10dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/fullname"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="-54dp"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/profile_image"
+                android:layout_toRightOf="@+id/profile_image"
+                android:text="Email"
+                android:textColor="#fff"
+                android:textSize="12dp"
+                android:textStyle="italic" />
+            <TextView
+                android:id="@+id/count_counselors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/fullname"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="-35dp"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/profile_image"
+                android:layout_toRightOf="@+id/profile_image"
+                android:textColor="#fff"
+                android:text="null"
+                android:textSize="8dp"
+                android:textStyle="italic" />
+
+
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 
-
-</android.support.v7.widget.ActionBarContainer>
+</LinearLayout>
