--- a/app/src/main/res/layout/mentee_nav_header_main.xml
+++ b/app/src/main/res/layout/mentee_nav_header_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@drawable/nav_header_background"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -19,17 +19,17 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-       android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:id="@+id/fullname"
+        android:id="@+id/fullnam"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/emai"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
@@ -38,21 +38,22 @@
         android:layout_height="15dp"
         app:civ_border_width="10dp"
         app:civ_border_color="#bfbfbf"
-        android:id="@+id/img_on"
+        android:id="@+id/img_of"
         android:visibility="gone"
         android:layout_marginTop="-60dp"
         android:layout_marginStart="50dp"
         android:src="@mipmap/ic_launcher"
         android:layout_marginLeft="20dp" />
+
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/img_o"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        app:civ_border_width="10dp"
-        app:civ_border_color="#05df29"
-        android:id="@+id/img_off"
-        android:visibility="gone"
-        android:layout_marginTop="-60dp"
         android:layout_marginStart="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="-60dp"
         android:src="@mipmap/ic_launcher"
-        android:layout_marginLeft="20dp" />
+        android:visibility="gone"
+        app:civ_border_color="#05df29"
+        app:civ_border_width="10dp" />
 </LinearLayout>
