--- a/app/src/main/res/layout/activity_mentor_profile.xml
+++ b/app/src/main/res/layout/activity_mentor_profile.xml
@@ -31,122 +31,59 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:padding="8dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="8dp">
 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profile_image"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:id="@+id/profile_image"
 
-                    android:src="@mipmap/ic_launcher"
-                    android:layout_centerHorizontal="true"/>
+                    android:layout_centerHorizontal="true"
+                    android:src="@mipmap/ic_launcher" />
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="FULLNAME"
                     android:id="@+id/fullname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/profile_image"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold"
                     android:layout_centerHorizontal="true"
-                    android:textSize="18dp"/>
+                    android:layout_marginTop="10dp"
+                    android:text="FULLNAME"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
 
 
                 <TextView
+                    android:id="@+id/expertise"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Expertise"
                     android:layout_below="@+id/fullname"
-                    android:id="@+id/expertise"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold"
                     android:layout_centerHorizontal="true"
-                    android:textSize="15dp"/>
+                    android:layout_marginTop="10dp"
+                    android:text="Expertise"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
     </android.support.design.widget.AppBarLayout>
 
 
-
-    <ScrollView
-        android:padding="10dp"
-        android:layout_above="@+id/bottom1"
-        android:layout_below="@+id/bar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
+        <RelativeLayout
+            android:layout_below="@+id/bar_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <android.support.v7.widget.CardView
-                    android:padding="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/recycler_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                    </android.support.v7.widget.RecyclerView>
-                </android.support.v7.widget.CardView>
-            </RelativeLayout>
-        </LinearLayout>
-    </ScrollView>
-
-
-
-    <LinearLayout
-        android:padding="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/bar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.CardView
-            android:padding="20dp"
-            android:visibility="gone"
-            android:id="@+id/card_view1"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+        <android.support.v7.widget.RecyclerView
+            android:elevation="4dp"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"/>
 
-            <com.hsalf.smilerating.SmileRating
-                android:rating="0"
-                android:id="@+id/rating_retrieve"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                app:angryColor="#f29a68"
-                app:drawingColor="#353431"
-                app:normalColor="#f2dd68"
-                app:isIndicator="false"
-                app:placeHolderBackgroundColor="#e6e8ed"
-                app:placeHolderSmileColor="#ffffff"
-                app:textNonSelectionColor="#AEB3B5"
-                app:textSelectionColor="#000000" />
-            <View
-                android:layout_marginTop="80dp"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/colorPrimaryDark"/>
-            <TextView
-                android:padding="10dp"
-                android:id="@+id/comments_retrieve"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginTop="80dp"
-                android:text="Comment Feedback" />
-
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
+        </RelativeLayout>
 
     <Button
         android:layout_width="match_parent"
