--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ececec"
+    android:padding="2dp"
     tools:context=".MainActivities.fragments.MessagesFragment">
 
     <!-- TODO: Update blank fragment layout -->
