--- a/app/src/main/res/layout/mentorlist500_1000_item.xml
+++ b/app/src/main/res/layout/mentorlist500_1000_item.xml
@@ -2,87 +2,100 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp"
-    android:layout_height="wrap_content">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:id="@+id/profile_image"
-        android:src="@mipmap/ic_launcher"/>
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_off"
-        android:layout_width="20dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="-59dp"
-        android:layout_marginTop="-20dp"
-        android:layout_toEndOf="@+id/profile_image"
-        android:layout_toRightOf="@+id/profile_image"
-        android:src="@mipmap/ic_launcher"
-        android:visibility="gone"
-        android:layout_below="@+id/profile_image"
-        app:civ_border_color="#bfbfbf"
-        app:civ_border_width="10dp"
-        android:layout_marginLeft="-76dp" />
+    android:layout_height="65dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_on"
-        android:layout_width="20dp"
-        android:layout_height="24dp"
-        android:layout_below="@+id/profile_image"
-        android:layout_marginStart="-57dp"
-        android:layout_marginLeft="-57dp"
-        android:layout_marginTop="-20dp"
-        android:layout_toEndOf="@+id/profile_image"
-        android:layout_toRightOf="@+id/profile_image"
-        android:src="@mipmap/ic_launcher"
-        android:visibility="gone"
-        app:civ_border_color="#05df29"
-        app:civ_border_width="10dp" />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/profile_image"
-        android:layout_toRightOf="@+id/profile_image">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="fullname"
-            android:textSize="15dp"
-            android:id="@+id/fullname"
-            android:maxLines="1"
-            android:textStyle="bold"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/expertise"
-            android:textSize="8dp"
-            android:textStyle="bold"
-            android:text="ex"
-            />
-        <TextView
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:elevation="4dp"
+        android:layout_margin="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="8dp"
-            android:text="rate"
-            android:id="@+id/rate"
-            />
-    </LinearLayout>
-    <Button
-        android:id="@+id/rate_star"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:textSize="10dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/border_layout"
-        android:padding="5dp"
-        android:text="@string/rate_counselor"
-        android:textColor="#111" />
+            android:layout_height="wrap_content">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/profile_image"
+                android:src="@mipmap/ic_launcher"
+                android:layout_marginLeft="5dp"
+                android:layout_alignParentLeft="true" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_off"
+                android:layout_width="20dp"
+                android:layout_height="24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="-20dp"
+                android:layout_toRightOf="@id/profile_image"
+                android:src="@mipmap/ic_launcher"
+                android:visibility="gone"
+                app:civ_border_color="#bfbfbf"
+                app:civ_border_width="10dp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_on"
+                android:layout_width="20dp"
+                android:layout_height="24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="-20dp"
+                android:layout_toEndOf="@+id/profile_image"
+                android:layout_toRightOf="@+id/profile_image"
+                android:src="@mipmap/ic_launcher"
+                android:visibility="gone"
+                app:civ_border_color="#05df29"
+                app:civ_border_width="10dp" />
+
+            <TextView
+                android:id="@+id/fullname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_toRightOf="@id/profile_image"
+                android:text="Fullname"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/expertise"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/fullname"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/profile_image"
+                android:text="Expertise"
+                android:textSize="8dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/rate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/expertise"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/profile_image"
+                android:text="Rate"
+                android:textSize="6dp" />
+
+            <Button
+                android:id="@+id/rate_star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:text="Rate Counselor"
+                android:textSize="10dp" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
