--- a/app/src/main/res/layout/mentorlist500_1000_item.xml
+++ b/app/src/main/res/layout/mentorlist500_1000_item.xml
@@ -50,6 +50,17 @@
                 android:visibility="gone"
                 app:civ_border_color="#05df29"
                 app:civ_border_width="10dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/last_message"
+                android:textColor="@color/colorPrimary"
+                android:maxLines="1"
+                android:layout_below="@id/expertise"
+                android:layout_marginStart="80dp"
+                android:layout_marginLeft="50dp" />
 
             <TextView
                 android:id="@+id/fullname"
@@ -57,7 +68,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="10dp"
                 android:layout_toRightOf="@id/profile_image"
                 android:text="Fullname"
                 android:textStyle="bold" />
@@ -74,16 +84,6 @@
                 android:textSize="8dp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/rate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/expertise"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/profile_image"
-                android:text="Rate"
-                android:textSize="6dp" />
 
             <Button
                 android:id="@+id/rate_star"
